<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adjustment_presets">adjustment presets</string>
    <string name="alert_battery">10%</string>
    <string name="alert_battery_notification">battery saver mode</string>
    <string name="alert_storage_notification">captures left</string>
    <string name="alert_storage_percent_notification">storage left</string>
    <string name="alert_storage_percent_text">%.01f%%</string>
    <string name="ancillary_awb_option_auto">auto</string>
    <string name="ancillary_awb_option_awb">awb</string>
    <string name="ancillary_burst_option_3">3</string>
    <string name="ancillary_burst_option_6">6</string>
    <string name="ancillary_flash_option_auto">auto</string>
    <string name="ancillary_option_off">off</string>
    <string name="ancillary_option_on">on</string>
    <string name="ancillary_quality_profile_1080">1080p</string>
    <string name="ancillary_quality_profile_2160">2160p</string>
    <string name="ancillary_quality_profile_480">480p</string>
    <string name="ancillary_quality_profile_720">720p</string>
    <string name="ancillary_quality_profile_high">high</string>
    <string name="ancillary_timer_option_10">10</string>
    <string name="ancillary_timer_option_20">20</string>
    <string name="ancillary_timer_option_3">3</string>
    <string name="ancillary_timer_option_5">5</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">apply</string>
    <string name="aspect_ratio_title">"aspect
ratio"</string>
    <string name="back">back</string>
    <string name="battery_percentage_mask">%1$d%%</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="burst_capture_saving_text">saving captures</string>
    <string name="burst_mode_title">burst</string>
    <string name="caf_title">"dynamic
af"</string>
    <string name="camera_mode_preference_key">light.co.dummycamera.cameramode</string>
    <string name="camera_not_found">No compatible camera was found. Exiting.</string>
    <string name="cancel">cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close_toolbar">Close Toolbar</string>
    <string name="com.crashlytics.android.build_id">ddea7de8-9aec-4fb8-99c3-ff434d438bba</string>
    <string name="confirm">confirm</string>
    <string name="confirmation_message_afd">The L16 will automatically focus on the face in your scene and will refocus anytime you move the camera.</string>
    <string name="confirmation_message_afs">The L16 will focus on a single point at a fixed distance until you refocus.</string>
    <string name="crash_log_upload_failed">Crash log uploaded failed. Check you internet connection.</string>
    <string name="crash_log_upload_success">Crash log uploaded successfully</string>
    <string name="discard">discard</string>
    <string name="edit_ftu_edit_sub_text">to adjust</string>
    <string name="edit_ftu_wheel_main_text">press &amp; drag</string>
    <string name="edit_ftu_wheel_skip">skip</string>
    <string name="empty" />
    <string name="encryption_key_not_set">public key not set at /sdcard/keys/light_pub.der</string>
    <string name="exif_minus_sign">−%.2f</string>
    <string name="exif_minus_sign_int">−%.0f</string>
    <string name="exif_plus_sign">+%.2f</string>
    <string name="exif_plus_sign_int">+%.0f</string>
    <string name="exif_zero">0</string>
    <string name="exposure_compensation_title">exposure</string>
    <string name="flash_disabled_message">To enable flash, adjust Power save mode options in Android Settings</string>
    <string name="flash_title">flash</string>
    <string name="ftu_button_confirm">got it</string>
    <string name="ftu_end_button">start shooting</string>
    <string name="ftu_end_subtitle_text">"You are on your way to
becoming an L16 photographer."</string>
    <string name="ftu_end_text">Want more tips? Go to support.light.co</string>
    <string name="ftu_focus_fail_button_text">got it</string>
    <string name="ftu_focus_fail_text">"The square shakes when the L16 can't focus. Tap again!"</string>
    <string name="ftu_focus_next">next</string>
    <string name="ftu_main_button">learn the basics</string>
    <string name="ftu_prime_150">150</string>
    <string name="ftu_prime_35">35</string>
    <string name="ftu_prime_75">75</string>
    <string name="ftu_prime_unit">mm</string>
    <string name="ftu_skip">skip</string>
    <string name="ftu_subtitle_exposure">exposure</string>
    <string name="ftu_subtitle_prime">prime focal length</string>
    <string name="ftu_subtitle_zoom">zoom</string>
    <string name="ftu_text_exposure">Drag your thumb up or down to adjust</string>
    <string name="ftu_text_focus_center">OR</string>
    <string name="ftu_text_half_press_focus">Half-press the shutter button</string>
    <string name="ftu_text_main">Ready to take some photos?</string>
    <string name="ftu_text_prime">Flick your thumb up or down to jump to</string>
    <string name="ftu_text_tap_focus">Tap the screen</string>
    <string name="ftu_text_zoom">Drag your thumb up or down to</string>
    <string name="ftu_title_focus">Set your focus before you shoot</string>
    <string name="ftu_tutorial_edit">How to edit images on camera</string>
    <string name="ftu_tutorial_exposure">How to adjust exposure, ISO and shutter speed</string>
    <string name="ftu_tutorial_focus">How to focus</string>
    <string name="ftu_tutorial_image_quality">How to determine image quality</string>
    <string name="ftu_tutorial_video">About Video</string>
    <string name="ftu_tutorial_zoom">How to zoom</string>
    <string name="ftu_video_beta_subtitle_text">Welcome to video mode!</string>
    <string name="ftu_video_final_subtitle_text">We hope you enjoy the video mode!</string>
    <string name="ftu_video_limitation_line_1">"• Limited Electronic Image Stabilization 
  and tuning"</string>
    <string name="ftu_video_limitation_line_2">"• Minor instability and occasional frame 
   loss, especially when switching 
   between 28mm and 70mm"</string>
    <string name="ftu_video_limitation_line_3">"• 150mm camera modules not enabled 
   (digital zoom only)"</string>
    <string name="ftu_video_limitation_line_4">• Slight audio noise over 70mm</string>
    <string name="ftu_video_limitation_line_5">• No AE lock</string>
    <string name="ftu_video_limitation_subtitle_text">"We are continuing to improve 
our video, so you may not see 
these features just yet."</string>
    <string name="ftu_video_limitation_title_text">Here are some limitations at this time:</string>
    <string name="ftu_video_spec_line_1">• Lens: 28mm or 70mm</string>
    <string name="ftu_video_spec_line_2">• Resolution: 1080p</string>
    <string name="ftu_video_spec_line_3">• Zoom range: 28-150mm</string>
    <string name="ftu_video_spec_subtitle_text">"Video on the L16 is taken by 
one camera at a time"</string>
    <string name="ftu_video_spec_title_text">Video specifications:</string>
    <string name="ftu_wheel_main_text">tag &amp; drag</string>
    <string name="ftu_wheel_skip">skip</string>
    <string name="ftu_wheel_sub_text">to adjust exposure</string>
    <string name="gotit">got it</string>
    <string name="grid_title">grid</string>
    <string name="hand_shake_assist_prefs_key">ftu_hand_shake_assist</string>
    <string name="hand_shake_assist_tooltip">Hold steady</string>
    <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
    <string name="hockeyapp_crash_dialog_message">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="hockeyapp_crash_dialog_negative_button">"Don't Send"</string>
    <string name="low_light_assist_prefs_key">ftu_low_light_assist</string>
    <string name="next">next</string>
    <string name="quality_ftu_body1">"- unprocessed image
- low-resolution
- captured with preview camera only"</string>
    <string name="quality_ftu_body2">"- partially processed on camera
- up to 13-megapixel resolution
- fused from 5 of 10+ cameras"</string>
    <string name="quality_ftu_body3">"- fully processed
- up to 52-megapixel resolution
- fused from 10+ cameras"</string>
    <string name="quality_ftu_subTitle1">Get a sense of how your photo turned out.</string>
    <string name="quality_ftu_subTitle2">Process on camera for share-worthy photos.</string>
    <string name="quality_ftu_subTitle3">Transfer to Lumen on desktop for full processing.</string>
    <string name="quality_ftu_title1">Preview</string>
    <string name="quality_ftu_title2">Good Quality</string>
    <string name="quality_ftu_title3">Highest Quality</string>
    <string name="setting_dof_guild_text">This number preset determines the intensity of the depth effect your images are processed with. This number can be changed on the light desktop app</string>
    <string name="setting_title">settings</string>
    <string name="tripod_detect_assist_prefs_key">ftu_tripod_assist</string>
    <string name="warning_hand_shake_assist_ftu">"Hold steady. The shutter speed may be too slow.
We recommend adjusting your settings or putting the
L16 on a tripod."</string>
    <string name="warning_low_light">Low-light assist</string>
    <string name="warning_low_light_ftu">"Low-light assist mode creates a slight shutter delay.
Keep your hands steady."</string>
    <string name="warning_tripod_detect">Tripod assist</string>
    <string name="warning_tripod_detect_ftu">"The L16 will now increase shutter speed and lower 
ISO for better image quality."</string>
</resources>