<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/ftu_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <light.co.camera.view.ftu.ImageFtuCoverScreen android:id="@id/ftu_welcome" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraButton="@string/ftu_main_button" app:ftuCameraSubtitle="@string/ftu_text_main" />
        <light.co.camera.view.ftu.ImageFtuZoom android:id="@id/ftu_zoom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraBody="@string/ftu_text_zoom" app:ftuCameraButton="@string/ftu_focus_next" app:ftuCameraImage="@drawable/ftu_zoom_exposure" app:ftuCameraPrime="false" app:ftuCameraSubtitle="@string/ftu_subtitle_zoom" />
        <light.co.camera.view.ftu.ImageFtuZoom android:id="@id/ftu_prime" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraBody="@string/ftu_text_prime" app:ftuCameraButton="@string/ftu_button_confirm" app:ftuCameraImage="@drawable/ftu_zoom_exposure" app:ftuCameraPrime="true" app:ftuCameraSubtitle="@string/ftu_subtitle_prime" />
        <light.co.camera.view.ftu.ImageFtuWheel android:id="@id/ftu_wheel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraBody="@string/ftu_text_exposure" app:ftuCameraButton="@string/ftu_button_confirm" app:ftuCameraImage="@drawable/ftu_zoom_exposure" app:ftuCameraSubtitle="@string/ftu_subtitle_exposure" />
        <light.co.camera.view.ftu.ImageFtuFocus android:id="@id/ftu_focus" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraBody="@string/ftu_text_half_press_focus" app:ftuCameraBody2="@string/ftu_text_tap_focus" app:ftuCameraButton="@string/ftu_focus_next" app:ftuCameraButton2="@string/ftu_button_confirm" app:ftuCameraSubtitle="@string/ftu_title_focus" />
        <light.co.camera.view.ftu.ImageFtuCoverScreen android:id="@id/ftu_end" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraBody="@string/ftu_end_text" app:ftuCameraButton="@string/ftu_end_button" app:ftuCameraSubtitle="@string/ftu_end_subtitle_text" />
        <light.co.camera.view.ftu.ftuVideo.VideoFtuScreen android:id="@id/ftu_video" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraButton="@string/ftu_focus_next" app:ftuCameraImage="@drawable/video_ftu1" app:ftuCameraSubtitle="@string/ftu_video_beta_subtitle_text" />
        <light.co.camera.view.ftu.ftuVideo.VideoFtuScreen android:id="@id/ftu_video_specs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraButton="@string/ftu_focus_next" app:ftuCameraImage="@drawable/video_ftu2" app:ftuCameraSpec="@string/ftu_video_spec_title_text" app:ftuCameraSpec1="@string/ftu_video_spec_line_1" app:ftuCameraSpec2="@string/ftu_video_spec_line_2" app:ftuCameraSpec3="@string/ftu_video_spec_line_3" app:ftuCameraSubtitle="@string/ftu_video_spec_subtitle_text" />
        <light.co.camera.view.ftu.ftuVideo.VideoFtuScreen android:id="@id/ftu_video_limitation" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraButton="@string/ftu_focus_next" app:ftuCameraSpec="@string/ftu_video_limitation_title_text" app:ftuCameraSpec1="@string/ftu_video_limitation_line_1" app:ftuCameraSpec2="@string/ftu_video_limitation_line_2" app:ftuCameraSpec3="@string/ftu_video_limitation_line_3" app:ftuCameraSpec4="@string/ftu_video_limitation_line_4" app:ftuCameraSpec5="@string/ftu_video_limitation_line_5" app:ftuCameraSubtitle="@string/ftu_video_limitation_subtitle_text" />
        <light.co.camera.view.ftu.ftuVideo.VideoFtuScreen android:id="@id/ftu_video_finish" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:ftuCameraButton="@string/ftu_button_confirm" app:ftuCameraImage="@drawable/video_ftu1" app:ftuCameraSubtitle="@string/ftu_video_final_subtitle_text" />
    </FrameLayout>
    <light.co.lib.widget.TextViewRegular android:textSize="@dimen/image_ftu_text_size" android:textColor="@color/image_ftu_text_color" android:layout_gravity="end" android:id="@id/ftu_skip" android:padding="@dimen/image_ftu_skip_margin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/image_ftu_skip_margin" android:layout_marginRight="@dimen/image_ftu_skip_margin" android:layout_marginBottom="@dimen/image_ftu_skip_margin" android:text="@string/ftu_skip" android:layout_marginVertical="@dimen/image_ftu_skip_margin" />
</FrameLayout>