<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/warning_container" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/sub_container" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <light.co.camera.view.assistance.AssistScreen android:id="@id/low_light_assist" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:assistPrefsKey="@string/low_light_assist_prefs_key" app:warningAssistText="@string/warning_low_light" app:warningFtuText="@string/warning_low_light_ftu" app:warningImage="@drawable/low_light_warning" />
        <light.co.camera.view.assistance.AssistScreen android:id="@id/tripod_detect_assist" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:assistPrefsKey="@string/tripod_detect_assist_prefs_key" app:warningAssistText="@string/warning_tripod_detect" app:warningFtuText="@string/warning_tripod_detect_ftu" app:warningImage="@drawable/tripod_detected" />
    </android.support.constraint.ConstraintLayout>
    <light.co.camera.view.assistance.AssistScreen android:id="@id/hand_shake_assist" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:assistPrefsKey="@string/hand_shake_assist_prefs_key" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sub_container" app:warningAssistText="@string/hand_shake_assist_tooltip" app:warningFtuText="@string/warning_hand_shake_assist_ftu" app:warningImage="@drawable/ic_handshake_assist" />
</android.support.constraint.ConstraintLayout>