<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/settings_list_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/setting_view_title_h">
        <ImageView android:id="@id/setting_f_back_button" android:padding="@dimen/setting_view_top_icon_padding" android:layout_width="@dimen/setting_view_back_button_size" android:layout_height="@dimen/setting_view_back_button_size" android:src="@drawable/gallery_toolbar_back" android:layout_centerVertical="true" android:contentDescription="@string/empty" android:rotation="180.0" />
        <light.co.lib.widget.TextViewRegular android:textSize="@dimen/text_size_medium_large" android:textColor="@color/default_color" android:gravity="center" android:id="@id/setting_title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/setting_title" />
        <ImageView android:id="@id/dof_guild_btn" android:padding="@dimen/setting_view_top_icon_padding" android:visibility="gone" android:layout_width="@dimen/setting_view_title_h" android:layout_height="@dimen/setting_view_title_h" android:src="@drawable/setting_dof_help_4x" android:layout_centerVertical="true" android:contentDescription="@string/empty" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:id="@id/diff_view" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/top_bar" />
    <light.co.lib.widget.TextViewRegular android:textSize="@dimen/text_size_small" android:textColor="@color/default_color" android:id="@id/dof_guild" android:background="@color/color_black_75" android:paddingLeft="@dimen/setting_view_landscape_margin" android:paddingTop="@dimen/setting_view_top_icon_padding" android:paddingRight="@dimen/setting_view_landscape_margin" android:paddingBottom="@dimen/setting_view_top_icon_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_dof_guild_text" android:layout_below="@id/diff_view" />
    <RelativeLayout android:id="@id/dof_section" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/dof_guild">
        <light.co.camera.view.setting.scroll.FastScrollRecycler android:id="@id/setting_list" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/setting_view_item_margin" android:layout_marginRight="@dimen/setting_view_item_margin" app:fastScrollAutoHide="true" app:fastScrollAutoHideDelay="5000" app:fastScrollMarginRight="@dimen/setting_view_item_margin" app:fastScrollThumbColor="#ffe0e0e0" app:fastScrollThumbDrawable="@drawable/setting_scroll_bar" app:fastScrollThumbHeight="@dimen/setting_view_scroll_thumb_height" app:fastScrollThumbMarginBottom="@dimen/setting_view_item_margin" app:fastScrollThumbMarginTop="@dimen/setting_view_item_margin" app:fastScrollThumbWidth="@dimen/setting_view_item_margin" app:fastScrollTrackColor="@android:color/transparent" />
        <LinearLayout android:orientation="horizontal" android:id="@id/dof_wheel_parent" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/setting_view_dof_parent_w" android:layout_height="@dimen/setting_view_dof_parent_h" android:layout_marginBottom="@dimen/setting_view_dof_view_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <View android:id="@id/ftuBackdrop" android:background="@drawable/ashahi_dake" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <View android:id="@id/ftuDimmer" android:background="@color/dim_background" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <FrameLayout android:id="@id/ftuContainer" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <light.co.lib.widget.TextViewSemiBold android:textSize="@dimen/confirmation_message_text_size" android:textColor="@color/confirmation_message" android:id="@id/setting_disabled_message" android:background="@color/confirmation_message_background" android:paddingLeft="@dimen/settings_item_disabled_msg_left_margin" android:paddingTop="@dimen/settings_item_disabled_msg_top_margin" android:paddingRight="@dimen/settings_item_disabled_msg_right_margin" android:paddingBottom="@dimen/settings_item_disabled_msg_bottom_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAlignment="center" />
</RelativeLayout>